FIX application setting

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "snowpack dev",
+    "dev:snowpack": "snowpack dev",
+    "dev": "netlify dev",
     "build": "snowpack build"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "axios": "^0.21.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "lodash": "^4.17.20",
+    "netlify-cli": "^2.68.5",
     "postcss": "^8.1.7",
     "qs": "^6.9.4",
     "snowpack": "^2.17.1",
